fix icon invisible badge on Firefox (https://github.com/uBlockOrigin/uMatrix-issues/issues/68)

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -36,6 +36,7 @@
     border: border: 1px solid transparent;
     display: inline-block;
     height: 1.2em;
+    overflow: visible;
     vertical-align: middle;
     width: 1.2em;
     }
